        from a publish now checkbox to a publish now button

    Bugs fixed

      - Fixed space above kupu
      
      - In the news filter the select all button aligns left

      - Fixed broken rss image

      - Fixed memory leakage in the Inline News Viewer

      - Fixed some query variable names in the AgendaFilter

      - Fixed i18n support

  2.1.2

    Bugs fixed

      - Fixed support for code sources (external sources) in news items.

  2.1.1
  
    Bugs fixed

      - Fixed some documentation issues: some version numbers were wrong.

  2.1

    Bugs fixed

      - Added upgrader for a specific Zope 2.8.x issue, where some ZCatalog
        indexes had a new attribute defined, but the upgrader for that 
        attribute wasn't executed when required.

    Features

      - SilvaNewsNetwork now works on (and depends on!) Silva 1.5.

  2.0.2

    Bugs fixed

      - Fixed Kupu ExternalSources support in news items. Thanks to Andrew
        Altepeter.

      - Fixed bug where upgrader was registered for the wrong meta type. Thanks
        to Marc Petitmermet.

      - Added dummy upgrader for 1.2, which makes that the upgrades are
        actually ran when the data version is 1.2 (works around a bug in
        Silva's upgrade registry).

  2.0.1

    Bugs fixed

      - Added missing upgraders for 1.3 (or below) to 2.0.

  2.0

    Features

      - Kupu editor support for news items (replacing the widget editor)

      - Name change from SilvaNews to SilvaNewsNetwork

  1.3

    Features

      - In each item in a news viewer, the first image of the item's content 
        (if available) is displayed as a thumbnail.

      - Removed all tables from the public views to more easily allow styling
        and layouting with CSS (note that this changes the layout of the public
        views!)

      - Added a new checkbox in Agenda Items, 'display time', to control 
        whether the time part of start and end date/time is displayed in