@@ -93,9 +93,9 @@ class AgendaFilter(Filter):
         # set (since they're retrieved above)
         for item in result_startdt:
             obj = item.getObject()
-            if (not item.object_path in self._excluded_items and 
-                    (not hasattr(obj, 'end_datetime') or 
-                        not obj.end_datetime())):
+            edt = getattr(obj, 'end_datetime', None)
+            if (item.object_path not in self._excluded_items and
+                    (not edt or edt.month() != month or edt.year() != year)):
                 result.append(item)
 
         result = [r for r in result]
@@ -197,9 +197,9 @@ class AgendaFilter(Filter):
         # remove the items with an end_dt from the result_startdt
         for item in result_startdt:
             obj = item.getObject()
+            edt = getattr(obj, 'end_datetime', None)
             if (item.object_path not in self._excluded_items and
-                    (not hasattr(obj, 'end_datetime') or 
-                        not obj.end_datetime())):
+                    (not edt or edt.month() != month or edt.year() != year)):
                 result.append(item)
 
         result = [r for r in result]
@@ -266,9 +266,9 @@ class AgendaFilter(Filter):
 
         for item in result_startdt:
             obj = item.getObject()
+            edt = getattr(obj, 'end_datetime', None)
             if (item.object_path not in self._excluded_items and
-                    (not hasattr(obj, 'end_datetime') or
-                        not obj.end_datetime())):
+                    (not edt or edt.month() != month or edt.year() != year)):
                 result.append(item)
 
         result = [r for r in result]
@@ -325,7 +325,8 @@ class AgendaFilter(Filter):
 
         for item in result_startdt:
             obj = item.getObject()
-            if not hasattr(obj, 'end_datetime') or not obj.end_datetime():
+            edt = getattr(obj, 'end_datetime', None)
+            if not edt or edt.month() != month or edt.year() != year:
                 result.append(item)
 
         result.sort(brainsorter)
